# android_kernel_exynosnext_s5e8825

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  build.config.exynosnext  docker-compose.yml  oneui.config  vendor_exynosnext.config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
anykernel3/: anykernel.sh
arch/arm64/boot/dts/samsung/: Makefile  exynos1280-a25x.dts  exynos1280-a26x.dts  exynos1280-a33x.dts  exynos1280-a53x.dts  exynos1280-gta4xls.dts  exynos1280-m33x.dts  exynos1280-m34x.dts  exynos1280-pmic-s2mps34.dtsi  exynos1280.dtsi
docs/: PORTING.md  STATUS.md  reference-a53-real.dts
gki/aarch64/symbols/: exynosnext
include/dt-bindings/clock/: samsung,exynos1280-clk.h
include/linux/mfd/samsung/: s2mps34.h
include/soc/samsung/: acpm_ipc_ctrl.h
scripts/: build.sh  docker-build.sh  extract-modules.sh  flash.sh  get-samsung-source.sh  setup.sh
scripts/patches/: ksu-sepolicy-ack618.py
