# ExynosNext Kernel — Root BUILD.bazel

load("@bazel_skylib//lib:selects.bzl", "selects")
load("//common:kernel.bzl", "kernel_build", "kernel_modules_install")
load("//common:dist.bzl", "kernel_dist")
load("//common:kmi_symbol_list.bzl", "kmi_symbol_list")

# ── KMI Symbol List ────────────────────────────────────────────────

kmi_symbol_list(
    name = "exynosnext_kmi_symbols",
    kernel_build = "//common:kernel_aarch64",
    symbol_list = "gki/aarch64/symbols/exynosnext",
)

# ── GKI Kernel Build ───────────────────────────────────────────────

kernel_build(
    name = "exynosnext_kernel_aarch64",
    srcs = [
        "//common:kernel_aarch64",
    ],
    base_kernel = "//common:kernel_aarch64",
    defconfig = "gki_defconfig",
    kmi_symbol_list = ":exynosnext_kmi_symbols",
    # Only modules with real, ported source are listed here. The remaining
    # subsystems (display, gpu, media, audio, modem, wifi, input, sensors,
    # battery, fingerprint) are scaffolding under vendor/samsung/ with no source
    # yet; they are intentionally omitted until ported from the Samsung 5.10
    # CAL-IF tree. See docs/STATUS.md and docs/PORTING.md.
    modules = [
        "//vendor/samsung/clock:samsung_clk",
    ],
    module_outs = [
        "clk_s5e8825.ko",
    ],
)

# ── Distribution ────────────────────────────────────────────────────

kernel_dist(
    name = "exynosnext_dist",
    kernel_build = ":exynosnext_kernel_aarch64",
)
